--- a/star-wars-blog/src/styles/Error404.css
+++ b/star-wars-blog/src/styles/Error404.css
@@ -1,6 +1,6 @@
 .error404-div {
-    height: 100vh;
     width: 80%;
+    min-height: 100vh;
     padding-right: 10%;
     padding-left: 10%;
     display: flex;
@@ -9,14 +9,19 @@
     gap: 80px;
     position: relative;
     overflow: hidden;
-    background: url(../assets/images/error404.webp) no-repeat center center;
-    background-size: auto 100%;
     z-index: 0;
 }
 
-.error404-div div {
-    position: absolute;
+.error404-div img {
     z-index: 1;
+    position: absolute;
+    width: 120%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    z-index: 2;
     background: rgb(219, 197, 190, .50);
     width: 100%;
     height: 100%;
@@ -24,12 +29,12 @@
 
 .error404-div h1 {
     margin-top: 200px;
-    z-index: 2;
+    z-index: 3;
     text-align: center;
     font-size: 36px;
 }
 
 .error404-div a {
-    z-index: 2;
+    z-index: 3;
     font-size: 32px;
 }
