--- a/star-wars-blog/src/styles/Error404.css
+++ b/star-wars-blog/src/styles/Error404.css
@@ -5,6 +5,7 @@
     padding-left: 10%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 80px;
     position: relative;
@@ -15,8 +16,7 @@
 .error404-div img {
     z-index: 1;
     position: absolute;
-    width: 120%;
-    height: auto;
+    
 }
 
 .overlay {
@@ -28,7 +28,6 @@
 }
 
 .error404-div h1 {
-    margin-top: 200px;
     z-index: 3;
     text-align: center;
     font-size: 36px;
