--- a/star-wars-blog/src/styles/Error404.css
+++ b/star-wars-blog/src/styles/Error404.css
@@ -1,4 +1,17 @@
+.error-page {
+    background: url(../assets/images/error404.webp) no-repeat center center fixed;
+    position: relative;
+}
+
+.error-overlay {
+    position: absolute;
+    background: rgb(219, 197, 190, .50);
+    width: 100%;
+    height: 100%;
+}
+
 .error404-div {
+    position: absolute;
     width: 80%;
     min-height: 100vh;
     padding-right: 10%;
@@ -8,31 +21,15 @@
     justify-content: center;
     align-items: center;
     gap: 80px;
-    position: relative;
     overflow: hidden;
-    z-index: 0;
-}
-
-.error404-div img {
-    z-index: 1;
-    position: absolute;
-}
-
-.overlay {
-    position: absolute;
-    z-index: 2;
-    background: rgb(219, 197, 190, .50);
-    width: 100%;
-    height: 100%;
 }
 
 .error404-div h1 {
-    z-index: 3;
     text-align: center;
     font-size: 36px;
 }
 
 .error404-div a {
-    z-index: 3;
     font-size: 32px;
+    color: midnightblue;
 }
