--- a/star-wars-blog/src/styles/TestPage.css
+++ b/star-wars-blog/src/styles/TestPage.css
@@ -1,10 +1,10 @@
 .test-app {
     font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    background-color: lightsteelblue;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
