--- a/star-wars-blog/src/styles/TestPage.css
+++ b/star-wars-blog/src/styles/TestPage.css
@@ -2,11 +2,11 @@
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
     width: 80%;
+    padding-top: 50px;
     margin-left: auto;
     margin-right: auto;
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
