--- a/star-wars-blog/src/styles/Auth.css
+++ b/star-wars-blog/src/styles/Auth.css
@@ -113,8 +113,11 @@ label[for="file"]:active {
 }
 
 .link-switch {
+    margin-top: 40px;
+    text-decoration: underline;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-weight: bold;
-    margin-top: 40px;
     cursor: pointer;
+    background-color: transparent;
 }
