Apport de l'effet CSS d'opacité à l'apparition des cartes, avec légère adaptation de la structure du composant.

--- a/star-wars-blog/src/styles/Card.css
+++ b/star-wars-blog/src/styles/Card.css
@@ -11,6 +11,19 @@
     transition-duration: 1s;
 }
 
+.card-home {
+    animation: fadein 1s;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .card:hover {
     border: 2px solid white;
 }
