--- a/star-wars-blog/src/styles/Article.css
+++ b/star-wars-blog/src/styles/Article.css
@@ -14,6 +14,19 @@
     background-color: black;
 }
 
+.showing-data {
+    animation: fadein .5s;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .arrow-link {
     margin-left: 15px;
     margin-top: 20px;
