--- a/star-wars-blog/src/styles/Topics.css
+++ b/star-wars-blog/src/styles/Topics.css
@@ -1,7 +1,20 @@
 .topics {
-    background-color: pink;
+    background-color: black;
+    color: white;
+}
+
+.topics div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .topics-page-title {
-    color: violet;
+    margin-top: 50px;
+}
+
+.topics-list {
+    background-color: grey;
+    width: 100%;
 }
