Travail de conception du Forum.

--- a/star-wars-blog/src/styles/Topics.css
+++ b/star-wars-blog/src/styles/Topics.css
@@ -1,5 +1,5 @@
 .topics {
-    background-color: black;
+    background: url(../assets/images/star-wars-episode9-team.webp) no-repeat center center fixed;
     color: white;
 }
 
