--- a/star-wars-blog/src/styles/Home.css
+++ b/star-wars-blog/src/styles/Home.css
@@ -1,7 +1,7 @@
 .div-welcome {
-    background-image: url(../assets/images/background05.webp);
-    background-size: 100%, 100%;
-    background-position: 50%, 50%;
+    background: url(../assets/images/background05.webp) no-repeat center center;
+    /* background-size: 100%, 100%;
+    background-position: 50%, 50%; */
     height: 600px;
     padding-top: 100px;
     cursor: default;
@@ -23,6 +23,7 @@
 }
 
 .div-categories {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
