--- a/star-wars-blog/src/styles/Topics.css
+++ b/star-wars-blog/src/styles/Topics.css
@@ -1,13 +1,23 @@
 .topics {
     background: url(../assets/images/star-wars-episode9-team.webp) no-repeat center center fixed;
     color: white;
+    position: relative;
 }
 
-.topics div {
+.topics-main {
+    position: absolute;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.topics-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.6;
 }
 
 .topics-page-title {
@@ -15,6 +25,6 @@
 }
 
 .topics-list {
-    background-color: grey;
+    text-align: center;
     width: 100%;
 }
