--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -57,6 +57,41 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+}
+
+.header-div-connection {
+    position: absolute;
+    right: 55px;
+    top: 4px;
+    height: 100px;
+    text-align: center;
+}
+
+.header-div-connection img {
+    width: 45px;
+    height: 45px;
+    background-color: black;
+    outline: 2px solid yellow;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.connection-link {
+    margin-top: 0;
+    font-size: 14px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
+.connection-link-unlogged {
+    margin-top: 25px;
+    font-size: 18px;
+    text-decoration: underline;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
 }
 
 .title-and-links h1 {
