--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -61,9 +61,12 @@
 }
 
 .header-div-connection {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
     position: absolute;
     right: 55px;
-    top: 4px;
+    top: 6px;
     height: 100px;
     text-align: center;
 }
@@ -77,17 +80,19 @@
     cursor: pointer;
 }
 
-.connection-link {
-    margin-top: 0;
-    font-size: 14px;
+.connection-link-logout {
+    display: flex;
+    margin-right: 15px;
+    font-size: 16px;
+    text-decoration: underline;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
 
-.connection-link-unlogged {
+.connection-link {
     margin-top: 25px;
-    font-size: 18px;
+    font-size: 16px;
     text-decoration: underline;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
