--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -67,7 +67,7 @@
     position: absolute;
     right: 55px;
     top: 6px;
-    height: 100px;
+    height: fit-content;
     text-align: center;
 }
 
