--- a/star-wars-blog/src/styles/Card.css
+++ b/star-wars-blog/src/styles/Card.css
@@ -1,5 +1,6 @@
 .card {
     display: flex;
+    justify-content: center;
     margin: 15px;
     width: 400px;
     height: 180px;
@@ -29,6 +30,7 @@
 }
 
 .card-link {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,8 +49,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80%;
-    width: 100%;
+    height: 100%;
+    width: 110%;
     overflow: hidden;
 }
 
@@ -58,7 +60,11 @@
 }
 
 .card-name-div {
-    width: 90%;
+    position: absolute;
+    bottom: 0;
+    width: 110%;
+    min-height: 40px;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -67,6 +73,8 @@
 .card-name {
     text-align: center;
     font-size: 22px;
+    text-transform: lowercase;
+    width: 85%;
     height: fit-content;
     color: white;
     margin-top: 0;
