Changement de style des liens de connexion / déconnexion (Header) lors du survol de la souris.

--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -90,6 +90,10 @@
     cursor: pointer;
 }
 
+.connection-link:hover, .connection-link-logout:hover {
+    color: yellow;
+}
+
 .connection-link {
     margin-top: 25px;
     font-size: 16px;
