--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -80,25 +80,31 @@
     cursor: pointer;
 }
 
+.header-div-connection img:hover {
+    outline: 2px solid white;
+}
+
 .connection-link-logout {
     display: flex;
     margin-right: 15px;
     font-size: 16px;
+    font-weight: bold;
     text-decoration: underline;
-    color: white;
+    color: yellow;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
 
 .connection-link:hover, .connection-link-logout:hover {
-    color: yellow;
+    color: white;
 }
 
 .connection-link {
     margin-top: 25px;
     font-size: 16px;
     text-decoration: underline;
-    color: white;
+    color: yellow;
+    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
