--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -1,4 +1,4 @@
-.post-page {
+.account-page {
     background: url(../assets/images/star-wars-dialog.webp) no-repeat center center fixed;
     background-size: cover;
     width: 80%;
@@ -6,18 +6,20 @@
     position: relative;
 }
 
-.post-overlay {
+.account-overlay {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: lightblue;
     opacity: 0.6;
 }
 
-.post-content {
+.account-content {
     position: absolute;
 }
 
-.post-title {
+.account-title {
+    color: black;
     margin-top: 50px;
+    text-transform: lowercase;
 }
