--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -1,5 +1,5 @@
 .account-page {
-    background: url(../assets/images/star-wars-dialog.webp) no-repeat center center fixed;
+    background: url(../assets/images/millenium_condor_chess_room.webp) no-repeat center center;
     background-size: cover;
     width: 80%;
     color: white;
@@ -16,10 +16,54 @@
 
 .account-content {
     position: absolute;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .account-title {
     color: black;
     margin-top: 50px;
     text-transform: lowercase;
+}
+
+.account-data {
+    color: black;
+    gap: 40px;
+    width: 50%;
+    padding: 10px;
+    background-color: gainsboro;
+    opacity: 0.5;
+    border-radius: 5px;
+}
+
+.account-user-picture {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    outline: 2px solid black;
+    border-radius: 50%;
+    background-color: gainsboro;
+}
+
+.account-user-picture img {
+    width: 100%;
+    height: auto;
+}
+
+.account-user-detail {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.account-user-key {
+    text-transform: lowercase;
+    font-size: 20px;
+}
+
+.account-user-value {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
 }
