--- a/star-wars-blog/src/styles/Category.css
+++ b/star-wars-blog/src/styles/Category.css
@@ -51,7 +51,7 @@
     justify-content: center;
     align-items: center;
     background: url(../assets/images/background03.webp) no-repeat center center fixed;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .page-content h1 {
@@ -61,7 +61,8 @@
 }
 
 .dozen-indicator {
-    position: fixed;
+    position: sticky;
+    margin-bottom: 50px;
     bottom: 50px;
     background-color: black;
     color: white;
@@ -75,6 +76,16 @@
     text-align: center;
     line-height: 36px;
     cursor: default;
+    animation: fadein 3s;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .card-list {
