--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -2,6 +2,7 @@
     background: url(../assets/images/millenium_condor_chess_room.webp) no-repeat center center;
     background-size: cover;
     width: 80%;
+    height: fit-content;
     color: white;
     position: relative;
 }
@@ -15,7 +16,7 @@
 }
 
 .account-content {
-    position: absolute;
+    z-index: 1;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -26,16 +27,28 @@
     color: black;
     margin-top: 50px;
     text-transform: lowercase;
+    cursor: default;
 }
 
 .account-data {
     margin-top: 50px;
+    margin-bottom: 50px;
     color: black;
     gap: 40px;
     width: 50%;
-    padding: 10px;
+    height: fit-content;
+    padding: 20px;
     background: rgba(220, 220, 220, .5);
     border-radius: 8px;
+}
+
+.account-profile-title {
+    width: 100%;
+    font-size: 22px;
+    text-align: center;
+    text-transform: lowercase;
+    margin-bottom: 40px;
+    cursor: default;
 }
 
 .account-user-picture {
@@ -64,9 +77,114 @@
 .account-user-key {
     text-transform: lowercase;
     font-size: 20px;
+    cursor: default;
 }
 
 .account-user-value {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
+    cursor: default;
+}
+
+.account-section-separator {
+    height: 2px;
+    width: 80%;
+    background-color: gainsboro;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.account-form-update-section h2 {
+    font-size: 22px;
+    text-transform: lowercase;
+    text-align: center;
+    margin-bottom: 40px;
+    cursor: default;
+}
+
+.account-form-update {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+}
+
+.account-form-update input {
+    border: none;
+    border-radius: 20px;
+    width: 94%;
+    height: 31px;
+    margin: 0;
+    font-size: 18px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: white;
+}
+
+.account-form-update input:focus {
+    outline: 1px solid gainsboro;
+}
+
+input[type="file"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    opacity: 0;
+}
+
+label[for="file"] {
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    width: 94%;
+    height: 33px;
+    margin: 0;
+    font-size: 18px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+label[for="file"]:active {
+    outline: 1px solid gainsboro;
+}
+
+.input-valid-img {
+    background-color: transparent;
+    width: 25px;
+    height: 25px;
+    margin-left: 20px;
+}
+
+.display-none {
+    display: none;
+}
+
+.display-flex {
+    display: flex;
+}
+
+button {
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    width: 50%;
+    height: 33px;
+    margin: 0;
+    font-size: 18px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: white;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+
+button:active, button:hover {
+    outline: 4px solid gainsboro;
 }
