--- a/star-wars-blog/src/styles/Home.css
+++ b/star-wars-blog/src/styles/Home.css
@@ -1,7 +1,7 @@
 .div-welcome {
     background: url(../assets/images/background05.webp) no-repeat center center;
-    /* background-size: 100%, 100%;
-    background-position: 50%, 50%; */
+    /* background-size: 100%, 100%; */
+    background-position: 100%, 100%;
     height: 600px;
     padding-top: 100px;
     cursor: default;
