--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -127,7 +127,7 @@
     outline: 1px solid gainsboro;
 }
 
-input[type="file"] {
+.account-file-input[type="file"] {
     position: absolute;
     width: 0;
     height: 0;
@@ -135,7 +135,7 @@ input[type="file"] {
     opacity: 0;
 }
 
-label[for="file"] {
+.account-label[for="file"] {
     border: none;
     outline: none;
     border-radius: 20px;
@@ -150,7 +150,7 @@ label[for="file"] {
     
 }
 
-label[for="file"]:active {
+.account-label[for="file"]:active {
     outline: 1px solid gainsboro;
 }
 
@@ -169,7 +169,7 @@ label[for="file"]:active {
     display: flex;
 }
 
-button {
+.account-submit-button {
     font-family: Arial, Helvetica, sans-serif;
     border: none;
     outline: none;
@@ -185,6 +185,7 @@ button {
     cursor: pointer;
 }
 
-button:active, button:hover {
+.account-submit-button:active, .account-submit-button:hover {
     outline: 4px solid gainsboro;
+    border-radius: 20px;
 }
