Perfectionnement du formulaire d'update des données d"un utilisateur, et mise en place du mécanisme de suppression de l'ancienne image de profil si l'utilisateur met son image de profil à jour.

--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -111,6 +111,16 @@
     align-items: center;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:active,
+input:-webkit-autofill:focus {
+    background-color: #FFFFFF !important;
+    color: #555 !important;
+    -webkit-box-shadow: 0 0 0 1000px white inset !important;
+    -webkit-text-fill-color: #555555 !important;
+}
+
 .account-form-update input {
     border: none;
     border-radius: 20px;
