--- a/star-wars-blog/src/styles/UserData.css
+++ b/star-wars-blog/src/styles/UserData.css
@@ -18,7 +18,9 @@
     justify-content: center;
     align-items: center;
     height: 40px;
+    min-height: 40px;
     width: 40px;
+    min-width: 40px;
     border: 1px solid gray;
     border-radius: 10px;
     overflow: hidden;
@@ -39,10 +41,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .user-data-delete-image {
     width: 30px;
     height: 30px;
     cursor: pointer;
+}
+
+.user-data-delete-button:hover {
+    outline: 4px solid red;
 }
