--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -1,6 +1,6 @@
 .header {
     width: 80%;
-    height: 140px;
+    height: 140px; 
     margin-left: auto;
     margin-right: auto;
     background-color: black;
@@ -8,7 +8,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 .navbar {
@@ -16,7 +15,7 @@
     height: 100%;
     display: flex;
     background-image: url(../assets/images/banner02.webp);
-    background-size: 100%, 100%;
+    background-size: 110%, 110%;
     background-position: 50%, 50%;
     border: 1px solid yellow;
     /* border-bottom: 5px solid yellow; */
@@ -58,6 +57,10 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
+}
+
+.burger-menu {
+    display: none;
 }
 
 .header-div-connection {
@@ -149,4 +152,56 @@ nav a {
 nav a.active {
     color: gainsboro;
     cursor: default;
+}
+
+
+
+/* RESPONSIVE DESIGN : MOBILE */
+@media only screen and (max-width: 767px) {
+    .navbar {
+        overflow: hidden;
+    }
+
+    .link-logo {
+        display: none;
+    }
+
+    .burger-menu {
+        display: flex;
+        background-color: aqua;
+    }
+
+    .title-and-links h1 {
+        position: absolute;
+        top: 0;
+        font-size: 24px;
+        width: 60%;
+        height: 50%;
+        margin-left: 10px;
+        line-height: 24px;
+    }
+
+    .title-and-links nav {
+        display: none;
+        /* position: absolute;
+        top: 95px;
+        font-size: 12px;
+        flex-wrap: wrap;
+        height: fit-content;
+        line-height: 8px;
+        margin-left: 10px;
+        margin-right: 10px;
+        align-items: center;
+        justify-content: baseline;
+        gap: 20px; */
+    }    
+
+    .header-div-connection {
+        right: 10px;
+        top: 0;
+    }
+
+    .connection-link {
+        font-size: 12px;
+    }
 }
