--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -61,17 +61,13 @@
     position: relative;
 }
 
-.burger-menu {
-    display: flex;
-}
-
 .header-div-connection {
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
     position: absolute;
-    right: 55px;
-    top: 6px;
+    right: 30px;
+    top: 10px;
     height: fit-content;
     text-align: center;
 }
@@ -100,7 +96,7 @@
 
 .connection-link-logout {
     display: flex;
-    margin-right: 15px;
+    margin-right: 8px;
     font-size: 16px;
     font-weight: bold;
     text-decoration: underline;
@@ -137,6 +133,7 @@
 }
 
 .title-and-links nav {
+    max-width: 100%;
     height: 50%;
     margin-left: 10px;
     display: flex;
@@ -165,30 +162,46 @@ nav a.active {
 
 /* Ici : media queries pour la première partie tablette */
 @media screen and (max-width: 1580px) {
-
     .link-logo {
-        display: none;
+        position: absolute;
+        z-index: 3;
+        margin-top: 10px;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition-property: all;
+        transition-duration: .5s;
+    }
+    
+    .link-logo img {
+        /* width: 100%; */
+        width: 50px;
+        height: 50px;
     }
 
     .title-and-links nav {
-        display: none;
+        width: 97%;
+        gap: 1.5%;
+        position: absolute;
+        justify-content: space-around;
+        top: 70px;
+        font-size: 16px;
+        background-color: aqua;
     }
 
     .title-and-links h1 {
         position: absolute;
         top: 0;
+        font-size: 35px;
         width: 77%;
         height: 50%;
-        margin-left: 20px;
+        margin-left: 83px;
     }
 
-    .link-logo {
-        display: none;
-    }
-
-    .header-div-connection {
-        right: 40px;
-        top: 70px;
+    .connection-link, .connection-link-logout {
+        font-size: 14px;
     }
 }
 
@@ -210,15 +223,16 @@ nav a.active {
         margin-left: 10px;
         line-height: 32px;
     }
+
+    .header-div-connection {
+        right: 20px;
+        top: 70px;
+    }
 }
 
 
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
-    .connection-link, .connection-link-logout {
-        font-size: 12px;
-    }
-
     .header-div-connection {
         right: 20px;
         top: 70px;
