--- a/star-wars-blog/src/styles/UserData.css
+++ b/star-wars-blog/src/styles/UserData.css
@@ -11,6 +11,20 @@
     border: 1px solid black;
     border-radius: 10px;
     background-color: lightgray;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.fade-out {
+    animation: fadeout 1s;
+}
+
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 .user-data-picture {
