Améloration du design responsive du Header et du composant BurgerMenu.

--- a/star-wars-blog/src/styles/BurgerMenu.css
+++ b/star-wars-blog/src/styles/BurgerMenu.css
@@ -18,6 +18,10 @@
     .navlink-display-flex {
         display: flex;
     }
+
+    .navlink-display-flex:hover, .navlink-display-flex:focus, .navlink-display-flex:active {
+        color: yellow;
+    }
 }
 
 
