--- a/star-wars-blog/src/styles/Auth.css
+++ b/star-wars-blog/src/styles/Auth.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding-bottom: 50px;
 }
 
 .login-page-content h1 {
