--- a/star-wars-blog/src/styles/Header.css
+++ b/star-wars-blog/src/styles/Header.css
@@ -158,7 +158,7 @@ nav a.active {
 /************** Partie Responsive Design **************/
 /******************************************************/
 
-/* Ici : media queries pour la première partie tablette */
+/* Ici : media queries pour la seconde partie desktop */
 @media screen and (max-width: 1380px) {
     .link-logo {
         position: absolute;
@@ -205,7 +205,7 @@ nav a.active {
 }
 
 
-/* Ici : media queries pour la seconde partie tablette */
+/* Ici : media queries pour la première partie tablette */
 @media screen and (max-width: 1023px) {
     .link-logo {
         display: none;
