Modification des tailles de polices du footer en mode responsive pour tablette.

--- a/star-wars-blog/src/styles/Footer.css
+++ b/star-wars-blog/src/styles/Footer.css
@@ -53,6 +53,17 @@
 /************** Partie Responsive Design **************/
 /******************************************************/
 
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+    .footer-content h3 {
+        font-size: 16px;
+    }
+
+    .footer-content ul li {
+        font-size: 14px;
+    }
+}
+
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
     .footer {
