--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -1,6 +1,6 @@
 .account-page {
-    background: url(../assets/images/millenium_condor_chess_room.webp) no-repeat center center;
-    background-size: cover;
+    background: url(../assets/images/millenium_condor_chess_room.webp) no-repeat center center fixed;
+    /* background-size: cover; */
     width: 80%;
     height: fit-content;
     color: white;
