--- a/star-wars-blog/src/styles/Topics.css
+++ b/star-wars-blog/src/styles/Topics.css
@@ -25,6 +25,10 @@
 }
 
 .topics-list {
-    text-align: center;
+    margin-top: 50px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
