--- a/star-wars-blog/src/styles/Topic.css
+++ b/star-wars-blog/src/styles/Topic.css
@@ -2,7 +2,7 @@
     background: url(../assets/images/star-wars-dialog.webp) no-repeat center center fixed;
     background-size: cover;
     position: relative;
-    height: 100vh;
+    height: fit-content;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -19,7 +19,7 @@
 .topic-content {
     z-index: 1;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,12 +31,15 @@
     font-family: 'Starjedi';
     margin-top: 50px;
     cursor: default;
-    width: 70%;
+    width: 60%;
     text-align: center;
+    text-transform: lowercase;
 }
 
 .topic-list {
     margin-top: 50px;
+    gap: 30px;
+    margin-bottom: 50px;
     height: fit-content;
     width: 100%;
     display: flex;
