--- a/star-wars-blog/src/styles/index.css
+++ b/star-wars-blog/src/styles/index.css
@@ -18,6 +18,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-color: black; */
   background: url(../assets/images/stars.webp) no-repeat center center fixed;
+  background-size: cover;
 }
 
 .app {
