--- a/star-wars-blog/src/styles/TestPage.css
+++ b/star-wars-blog/src/styles/TestPage.css
@@ -9,4 +9,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+.like-svg {
+    transition-property: animation;
+    width: 40px;
+    height: 40px;
+}
+
+.like-svg:active {
+    animation: extend .1s;
+}
+
+@keyframes extend {
+    0% {
+        width: 40px;
+        height: 40px;
+    }
+    50% {
+        width: 60px;
+        height: 60px;
+    }
+    100% {
+        width: 40px;
+        height: 40px;
+    }
 }
