--- a/star-wars-blog/src/styles/TestPage.css
+++ b/star-wars-blog/src/styles/TestPage.css
@@ -2,15 +2,30 @@
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
     width: 80%;
-    padding-top: 50px;
+    /* padding-top: 50px; */
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
+    background-color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
+#path1 {
+    fill: white;
+    fill-opacity: 1;
+    stroke: #000000;
+    stroke-opacity: 1;
+}
+
+#path4 {
+    fill-opacity: 1;
+    stroke: #00a100;
+    stroke-width: 0.804057;
+    stroke-opacity: 1;
+}
+
 
 .like-svg {
     transition-property: animation;
