--- a/star-wars-blog/src/styles/PostCard.css
+++ b/star-wars-blog/src/styles/PostCard.css
@@ -5,27 +5,25 @@
     outline: 2px solid white;
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
+    background: url('../assets/images/dashboard.webp') no-repeat center center;
+    background-size: cover;
     overflow: hidden;
 }
 
 .post-card-overlay {
     position: absolute;
-    z-index: 1;
+    background-color: black;
+    z-index: 0;
     width: 100%;
     height: 100%;
-    background: url('../assets/images/dashboard.webp') no-repeat center center;
-    background-size: cover;
-    opacity: .2;
+    opacity: .8;
     border-radius: 10px;
 }
 
 .post-card-content {
-    position: absolute;
-    z-index: 2;
-    width: 100%;
+    width: 98%;
     height: 100%;
-    color: white;    
+    color: white;
 }
 
 .post-card-infos {
@@ -41,6 +39,7 @@
 }
 
 .post-card-content {
+    position: relative;
     margin-left: 15px;
     font-size: 16px;
     height: fit-content;
@@ -71,7 +70,7 @@
 }
 
 .post-card-author-div img {
-    height: 110%;
+    height: 100%;
     width: auto;
 }
 
@@ -80,7 +79,8 @@
 }
 
 .post-card-message p {
-    height: 180px;
+    min-height: 180px;
+    height: 100%;
     width: auto;
     font-size: 14px;
     margin-right: 60px;
@@ -89,10 +89,9 @@
 }
 
 .post-card-bottom-bar {
-    position: absolute;
-    bottom: 0;
+    padding-top: 10px;
     width: 100%;
-    height: 60px;
+    height: 70px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
