--- a/star-wars-blog/src/styles/Category.css
+++ b/star-wars-blog/src/styles/Category.css
@@ -12,6 +12,7 @@
 }
 
 .prev-arrow-section  {
+    z-index: 2;
     position: fixed;
     left: 12%;
     bottom: 40%;
@@ -27,6 +28,7 @@
 }
 
 .next-arrow-section {
+    z-index: 2;
     position: fixed;
     right: 12%;
     bottom: 40%;
