--- a/star-wars-blog/src/styles/Account.css
+++ b/star-wars-blog/src/styles/Account.css
@@ -43,6 +43,15 @@
     border-radius: 8px;
 }
 
+.unvalid-password-text {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
 .account-profile-title {
     width: 100%;
     font-size: 22px;
