--- a/star-wars-blog/src/styles/Topic.css
+++ b/star-wars-blog/src/styles/Topic.css
@@ -16,21 +16,24 @@
     justify-content: flex-start;
 }
 
-.arrow-link {
+.topic-arrow-link {
     position: absolute;
     margin-left: 15px;
     margin-top: 20px;
     width: 80px;
     height: 80px;
-    border-radius: 100%;
-    background-color: black;
+    border-radius: 50%;
+    background-color: transparent;
+    transition-property: all;
+    transition-duration: .2s;
 }
 
-.arrow-link:hover {
+.topic-arrow-link:hover {
+    background-color: black;
     filter: invert(1);
 }
 
-.arrow-link img {
+.topic-arrow-link img {
     width: 80px;
     height: 80px;
 }
