--- a/star-wars-blog/src/styles/Topics.css
+++ b/star-wars-blog/src/styles/Topics.css
@@ -17,11 +17,14 @@
     margin-top: 20px;
     width: 80px;
     height: 80px;
-    border-radius: 100%;
-    background-color: black;
+    border-radius: 50%;
+    background-color: transparent;
+    transition-property: all;
+    transition-duration: .2s;
 }
 
 .arrow-link:hover {
+    background-color: black;
     filter: invert(1);
 }
 
