--- a/star-wars-blog/src/styles/Article.scss
+++ b/star-wars-blog/src/styles/Article.scss
@@ -1,4 +1,99 @@
+@keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
 .div-return {
+	display: flex;
+	width: 100%;
+	justify-content: flex-start;
+	background-color: black;
+}
+.presentation {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	padding-bottom: 100px;
+	background-color: black;
+}
+.showing-data {
+	animation: fadein .5s;
+}
+.arrow-link {
+	margin-left: 15px;
+	margin-top: 20px;
+	width: 80px;
+	height: 80px;
+	border-radius: 100%;
+	background-color: black;
+	transition-property: all;
+	transition-duration: .2s;
+	&:hover {
+		filter: invert(1);
+	}
+	img {
+		width: 80px;
+		height: 80px;
+	}
+}
+.main-div {
+	width: 100%;
+	font-size: 22px;
+	text-align: center;
+	h1 {
+		max-width: 95%;
+		margin-left: auto;
+		margin-right: auto;
+		color: white;
+		cursor: default;
+	}
+}
+.content {
+	display: flex;
+	width: 100%;
+}
+.img-presentation {
+	width: 70%;
+	height: 800px;
+	margin-left: 25px;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 3px solid yellow;
+	border-radius: 20px;
+	img {
+		height: 100%;
+	}
+}
+.description-div {
+	width: 40%;
+	padding-bottom: 50px;
+	padding-left: 50px;
+	padding-right: 50px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 22px;
+	text-align: justify;
+	font-weight: bold;
+	line-height: 45px;
+	cursor: default;
+	p {
+		color: yellow;
+	}
+}
+
+
+
+
+
+/* .div-return {
     display: flex;
     width: 100%;
     justify-content: flex-start;
@@ -100,4 +195,4 @@
 
 .description-div p {
     color: yellow;
-}
+} */
