--- a/star-wars-blog/src/styles/Footer.scss
+++ b/star-wars-blog/src/styles/Footer.scss
@@ -1,11 +1,75 @@
 .footer {
+	width: 80%;
+	height: fit-content;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: black;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.footer-content {
+	width: 100%;
+	min-height: 200px;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-bottom: 70px;
+	border-top: 1px solid yellow;
+	border-left: 1px solid yellow;
+	border-right: 1px solid yellow;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	ul {
+		list-style: none;
+		padding-left: 0;
+		width: 30%;
+		min-width: 220px;
+		padding-left: 15px;
+		margin-left: auto;
+		margin-right: auto;
+		li {
+			margin-top: 15px;
+			a {
+				text-decoration: none;
+				color: yellow;
+			}
+		}
+	}
+	h3 {
+		cursor: default;
+		text-transform: lowercase;
+	}
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.footer-content {
+		h3 {
+			font-size: 16px;
+		}
+		ul {
+			li {
+				font-size: 14px;
+			}
+		}
+	}
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+	.footer {
+		width: 100%;
+	}
+}
+
+
+/* .footer {
     width: 80%;
     height: fit-content;
     margin-left: auto;
     margin-right: auto;
     background-color: black;
     color: white;
-    /* border-top: 2px solid yellow; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +118,7 @@
 /******************************************************/
 
 /* Ici : media queries pour la seconde partie desktop */
-@media screen and (max-width: 1380px) {
+/* @media screen and (max-width: 1380px) {
     .footer-content h3 {
         font-size: 16px;
     }
@@ -62,11 +126,11 @@
     .footer-content ul li {
         font-size: 14px;
     }
-}
+} */
 
 /* Ici : media queries pour la seconde partie tablette */
-@media screen and (max-width: 991px) {
+/* @media screen and (max-width: 991px) {
     .footer {
         width: 100%;
     }
-}
+} */
