--- a/star-wars-blog/src/styles/Forum.scss
+++ b/star-wars-blog/src/styles/Forum.scss
@@ -1,4 +1,82 @@
 .forum {
+	background: url(../assets/images/forum.webp) no-repeat center center fixed;
+	background-size: cover;
+	position: relative;
+	color: white;
+	min-height: 1300px;
+}
+.forum-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.6;
+}
+.forum-content {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	text-align: justify;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.chart-section {
+	height: fit-content;
+	overflow: hidden;
+	margin-top: 60px;
+	width: 100%;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	cursor: default;
+}
+.forum-title {
+	font-family: 'Starjedi';
+	margin-top: 50px;
+	cursor: default;
+}
+.forum-div-categories {
+	margin-top: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border: 2px solid yellow;
+	border-radius: 10px;
+	width: 50%;
+	background-color: black;
+	h2 {
+		width: 100%;
+		text-align: center;
+		color: yellow;
+		font-family: 'Starjedi';
+		padding-bottom: 10px;
+		cursor: default;
+	}
+}
+.div-category {
+	width: 100%;
+	height: 65px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	transition: all, .4s;
+	&:hover {
+		text-align: center;
+		background-color: white;
+		color: black;
+		font-size: 20px;
+	}
+}
+
+
+
+
+/* .forum {
     background: url(../assets/images/forum.webp) no-repeat center center fixed;
     background-size: cover;
     position: relative;
@@ -79,4 +157,4 @@
     background-color: white;
     color: black;
     font-size: 20px;
-}
+} */
