--- a/star-wars-blog/src/styles/SearchBar.scss
+++ b/star-wars-blog/src/styles/SearchBar.scss
@@ -1,4 +1,55 @@
 .search-bar {
+	width: 100%;
+	height: 120px;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: transparent;
+	position: relative;
+}
+.search-form {
+	display: flex;
+	width: 60%;
+	height: 100%;
+	padding-top: 120px;
+	padding-bottom: 120px;
+	padding-left: 180px;
+	padding-right: 180px;
+	justify-content: center;
+	align-items: center;
+	background-color: transparent;
+	overflow: hidden;
+	position: absolute;
+}
+.search-input {
+	width: 100%;
+	height: 45px;
+	padding: 0;
+	padding-left: 10px;
+	border: 1px solid gainsboro;
+	text-align: center;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border-radius: 6px;
+	background-color: black;
+	&:focus {
+		outline: 4px solid yellow;
+		border: none;
+		border-radius: 6px;
+		&::placeholder {
+			color: yellow;
+		}
+	}
+	&::placeholder {
+		color: gainsboro;
+	}
+}
+
+
+
+/* .search-bar {
     width: 100%;
     height: 120px;
     overflow: hidden;
@@ -50,4 +101,4 @@
 
 .search-input::placeholder {
     color: gainsboro;
-}
+} */
