--- a/star-wars-blog/src/styles/TestPage.scss
+++ b/star-wars-blog/src/styles/TestPage.scss
@@ -1,8 +1,57 @@
+@keyframes extend {
+	0% {
+		width: 40px;
+		height: 40px;
+	}
+	50% {
+		width: 60px;
+		height: 60px;
+	}
+	100% {
+		width: 40px;
+		height: 40px;
+	}
+}
 .test-app {
+	font-family: Arial, Helvetica, sans-serif;
+	min-height: 100vh;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: black;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+#path1 {
+	fill: white;
+	fill-opacity: 1;
+	stroke: #000000;
+	stroke-opacity: 1;
+}
+#path4 {
+	fill-opacity: 1;
+	stroke: #00a100;
+	stroke-width: 0.804057;
+	stroke-opacity: 1;
+}
+.like-svg {
+	transition-property: animation;
+	width: 40px;
+	height: 40px;
+	&:active {
+		animation: extend .1s;
+	}
+}
+
+
+
+
+/* .test-app {
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
     width: 80%;
-    /* padding-top: 50px; */
     margin-left: auto;
     margin-right: auto;
     background-color: black;
@@ -50,4 +99,4 @@
         width: 40px;
         height: 40px;
     }
-}
+} */
