--- a/star-wars-blog/src/styles/TopicCard.scss
+++ b/star-wars-blog/src/styles/TopicCard.scss
@@ -1,4 +1,61 @@
 .topic-card-main {
+	width: 80%;
+	height: 90px;
+	overflow: hidden;
+	border: 2px solid white;
+	border-radius: 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	position: relative;
+}
+.topic-card-banner {
+	width: 110%;
+	background-position: center;
+	position: absolute;
+}
+.topic-card-link {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	background-color: black;
+	transition: all 0.4s;
+	&:hover {
+		background-color: transparent;
+	}
+}
+.topic-card-content {
+	display: flex;
+	flex-direction: column;
+	color: white;
+	justify-content: center;
+	align-items: flex-start;
+	width: 100%;
+	height: 100%;
+	padding-left: 3%;
+	padding-right: 3%;
+	padding-top: 14px;
+	gap: 10px;
+}
+.topic-infos {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	h1 {
+		font-size: 20px;
+		margin: 0;
+	}
+	p {
+		font-size: 14px;
+		margin: 0;
+	}
+}
+
+
+
+/* .topic-card-main {
     width: 80%;
     height: 90px;
     overflow: hidden;
@@ -58,4 +115,4 @@
 .topic-infos p {
     font-size: 14px;
     margin: 0;
-}
+} */
