--- a/star-wars-blog/src/styles/Topics.scss
+++ b/star-wars-blog/src/styles/Topics.scss
@@ -1,4 +1,62 @@
 .topics {
+	background: url(../assets/images/star-wars-episode9-team.webp) no-repeat center center fixed;
+	color: white;
+	position: relative;
+}
+.topics-div-return {
+	position: absolute;
+	display: flex;
+	width: 100%;
+	justify-content: flex-start;
+}
+.arrow-link {
+	z-index: 2;
+	margin-left: 15px;
+	margin-top: 20px;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	background-color: transparent;
+	transition-property: all;
+	transition-duration: .2s;
+	&:hover {
+		background-color: black;
+		filter: invert(1);
+	}
+	img {
+		width: 80px;
+		height: 80px;
+	}
+}
+.topics-main {
+	position: absolute;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.topics-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.6;
+}
+.topics-page-title {
+	margin-top: 50px;
+}
+.topics-list {
+	margin-top: 50px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+}
+
+
+
+/* .topics {
     background: url(../assets/images/star-wars-episode9-team.webp) no-repeat center center fixed;
     color: white;
     position: relative;
@@ -60,4 +118,4 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-}
+} */
