--- a/star-wars-blog/src/styles/UserData.scss
+++ b/star-wars-blog/src/styles/UserData.scss
@@ -1,4 +1,58 @@
 .user-data-table {
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 94%;
+	height: 40px;
+	margin-top: 12px;
+	padding: 8px;
+	border: 1px solid black;
+	border-radius: 10px;
+	background-color: lightgray;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.user-data-picture {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 40px;
+	min-height: 40px;
+	width: 40px;
+	min-width: 40px;
+	border: 1px solid gray;
+	border-radius: 10px;
+	overflow: hidden;
+	img {
+		max-height: 40px;
+	}
+}
+.user-data-name {
+	cursor: default;
+	text-transform: lowercase;
+}
+.user-data-delete-button {
+	width: 37px;
+	height: 37px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+	&:hover {
+		outline: 4px solid red;
+	}
+}
+.user-data-delete-image {
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+}
+
+
+
+
+/* .user-data-table {
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -53,4 +107,4 @@
 
 .user-data-delete-button:hover {
     outline: 4px solid red;
-}
+} */
