Travail sur le responsive de la page "Home", avec des corrections sur les styles de la classe CSS ".app" pour un affichage correcte des pages du site en modes tablette et mobile.

--- a/star-wars-blog/src/styles/Home.scss
+++ b/star-wars-blog/src/styles/Home.scss
@@ -1,3 +1,7 @@
+.home-page {
+	border: 1px solid yellow;
+	width: auto;
+}
 .div-welcome {
 	background: url(../assets/images/background05.webp) no-repeat center center;
 	background-size: cover;
@@ -25,9 +29,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background: url(../assets/images/background02.webp);
-	background-size: 100%, 100%;
-	background-position: 50%, 50%;
+	background: url(../assets/images/background02.webp) no-repeat center center;
+	background-size: cover;
 	h2 {
 		color: white;
 		font-size: 34px;
@@ -47,6 +50,58 @@
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.welcome-message {
+		font-size: 16px;
+		line-height: 40px;
+	}
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+	.welcome-message {
+		line-height: 34px;
+	}
+}
+/* Ici : media queries pour la troisième partie tablette */
+@media screen and (max-width: 767px) {
+	.div-welcome {
+		height: 400px;
+		padding-top: 50px;
+	}
+	.welcome-message {
+		width: 75%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.div-categories {
+		h2 {
+			font-size: 27px;
+		}
+	}
+}
+/* Ici : media queries pour la première partie smartphone */
+@media screen and (max-width: 660px) {
+	.div-welcome {
+		height: fit-content;
+	}
+	.welcome-message {
+		font-size: 14px;
+		line-height: 30px;
+	}
+}
+/* Ici : media queries pour la seconde partie smartphone */
+@media screen and (max-width: 420px) {
+	.welcome-message {
+		font-size: 12px;
+		width: 70%;
+	}
+	.div-categories {
+		h2 {
+			font-size: 18px;
+		}
+	}
 }
 
 
