Correction des styles SCSS des pages "Forum", "Topic" (au singulier) et "Topics" (au pluriel).

--- a/star-wars-blog/src/styles/Forum.scss
+++ b/star-wars-blog/src/styles/Forum.scss
@@ -3,6 +3,8 @@
 	background-size: cover;
 	position: relative;
 	color: white;
+	width: calc(80% - 4px);
+	border: 1px solid yellow;
 	min-height: 1300px;
 }
 .forum-overlay {
