--- a/star-wars-blog/src/styles/Topic.scss
+++ b/star-wars-blog/src/styles/Topic.scss
@@ -3,9 +3,10 @@
 	background-size: cover;
 	position: relative;
 	height: fit-content;
-	width: 80%;
 	display: flex;
 	flex-direction: column;
+	width: calc(80% - 4px);
+	border: 1px solid yellow;
 }
 .topic-div-return {
 	position: absolute;
