Adaptation des styles SCSS du composant "Like".

--- a/star-wars-blog/src/styles/Like.scss
+++ b/star-wars-blog/src/styles/Like.scss
@@ -37,14 +37,19 @@ svg {
 	stroke-opacity: 1;
 }
 .like-svg {
-	transition-property: animation;
+	cursor: pointer;
 	width: 40px;
 	height: 40px;
+	transition-property: animation;
 	&:active {
 		animation: extend .1s;
 	}
 }
 
+.like-svg-disabled {
+	width: 40px;
+	height: 40px;
+}
 
 
 /* .like-div {
